<resources>
    <string name="app_name">NoDry</string>
    <string name="action_filtros">Filtros</string>
    <string name="obteniendo">Obteniendo los datos...</string>
    <string name="datos_exito">Datos obtenidos con éxito</string>
    <string name="datos_no_obtenidos">No se han podido obtener los datos</string>
    <string name="lbl_diesel">Diesel:</string>
    <string name="lbl_gasolina">Sin Plomo 95:</string>
    <string name="action_actualizar">Actualizar</string>
    <string name="datos_no_encontrados">No se encontraron datos</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="lbl_dieselb">Diesel Plus:</string>
    <string name="lbl_gasolina98">Sin Plomo 98:</string>
    <string name="minimo">Mínimo: </string>
    <string name="maximo">Máximo: </string>
    <string name="mensaje_error">MENSAJE ERROR</string>
    <string name="textviewrotulo">textView_Rotulo</string>
    <string name="localidad">Localidad:</string>
    <string name="municipio">Municipio:</string>
    <string name="textViewLocalidad">textView_Localidad</string>
    <string name="provincia">Provincia:</string>
    <string name="textViewProvincia">textView_Provincia</string>
    <string name="direccion">Dirección:</string>
    <string name="textViewDireccion">textView_Direccion</string>
    <string name="precios">PRECIOS:</string>
    <string name="ubicacion">UBICACIÓN:</string>
    <string name="horario">HORARIO:</string>
    <string name="abierto">ABIERTO!!</string>
    <string name="textViewHorario">textView_Horario</string>
    <string name="botonFiltrar">FILTRAR</string>
    <string name="comunidadAutonoma">Comunidad Autónoma</string>
    <string name="tipoCombustible">Tipo de combustible</string>
    <string name="rotulo">Rotulo</string>
    <string name="dir">Direccion</string>
    <string name="valor0">0.0</string>
</resources>
