<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/image"
        android:layout_height="64dp"
        android:layout_marginRight="10dp"
        android:contentDescription="Property Image"
        android:layout_width="64dp" />

    <LinearLayout
        android:id="@+id/infoSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rotulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="Rotulo"
            android:text="Rotulo"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Direccion"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pricingSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/lbldiesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_diesel"/>

        <TextView
            android:id="@+id/diesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lbldiesel"
            android:layout_marginLeft="2dp"
            />

        <TextView
            android:id="@+id/lblgasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_toRightOf="@id/diesel"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_gasolina"/>

        <TextView
            android:id="@+id/gasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/lblgasolina" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nuevosPrecios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pricingSection"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbldieselb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_dieselb"/>

        <TextView
            android:id="@+id/dieselb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lbldieselb"
            android:layout_marginLeft="2dp"
            />

        <TextView
            android:id="@+id/lblgasolina98"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_toRightOf="@id/dieselb"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_gasolina98"/>

        <TextView
            android:id="@+id/gasolina98"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/lblgasolina98" />

    </RelativeLayout>

</RelativeLayout>